# job_task1

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
api/: file_processor_factory.py  file_processors.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py
api/tests/: test_rest_api.py
storage/: celery.py  settings.py
